Add query-backend component
